--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L0cane Profile</title>
+    <title>L0cane</title>
     <style>
         * {
             margin: 0;
@@ -992,5 +992,6 @@
 </body>
 
 </html>
+
 
 
